show empty list hint, fixes #18

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="missing_mandatory_parameter">Missing mandatory parameter</string>
     <string name="unsupported_mime_type">Unsupported mime type</string>
     <string name="invalid_url">Invalid URL</string>
+    <string name="empty_streams_title">Empty stream list</string>
+    <string name="empty_streams">Add streams by tapping on the + button</string>
 </resources>
