--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="invalid_url">Invalid URL</string>
     <string name="empty_streams_title">Empty stream list</string>
     <string name="empty_streams">Add streams by tapping on the + button</string>
+    <string name="loading">Loading…</string>
 </resources>
