--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">BassCast</string>
     <string name="action_settings">Settings</string>
     <string name="action_cast">Connect to Google Cast</string>
+    <string name="action_edit">Edit</string>
     <string name="action_save">Save</string>
     <string name="action_delete">Delete</string>
     <string name="action_play">Play</string>
