--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="action_about">About</string>
     <string name="action_settings">Settings</string>
     <string name="action_cast">Connect to Google Cast</string>
     <string name="action_edit">Edit</string>
@@ -19,6 +20,16 @@
     <string name="empty_streams_title">Empty stream list</string>
     <string name="empty_streams">Add streams by tapping on the + button</string>
     <string name="loading">Loading…</string>
+    <string name="about_app_version">About %1$s v%2$s</string>
+    <string name="about_license">License: GPL v3</string>
+    <string name="about_website">Website:</string>
+    <string name="about_used_libraries">Used libraries:</string>
+    <string name="about_website_url" translatable="false">https://github.com/felixb/basscast</string>
+    <string name="about_libraries_butterknife" translatable="false">butterknife, Apache License 2.0, https://github.com/JakeWharton/butterknife</string>
+    <string name="about_libraries_eucookieconsent" translatable="false">EU Cookie Consent, MIT License, https://github.com/felixb/eucookieconsent</string>
+    <string name="about_libraries_jsoup" translatable="false">JSOUP, MIT License, http://jsoup.org/</string>
+    <string name="about_libraries_okhttp" translatable="false">OkHTTP, Apache License 2.0, https://github.com/square/okhttp</string>
+    <string name="about_libraries_simple_sql_provider" translatable="false">Simple SQL Provider, Apache License 2.0, https://github.com/ckurtm/simple-sql-provider</string>
     <string name="error_fetching_mime_type">Problem fetching mime type</string>
     <string name="error_fetching_stream">Problem fetching stream content</string>
     <string name="error_loading_media">Problem occurred with media during loading</string>
