--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="action_play_locally">Play locally</string>
     <string name="casting_stream">Casting %1$s on %2$s</string>
     <string name="playing_stream_on_this_device">Playing %1$s on this device</string>
-    <string name="playing_stream_on_this_device_not_connected">Not connected to Chromecast\nPlaying %1$s on this device</string>
     <string name="title_hint">Title</string>
     <string name="url_hint">Url</string>
     <string name="mimeType_hint">Mime Type</string>
@@ -34,4 +33,5 @@
     <string name="error_fetching_stream">Problem fetching stream content</string>
     <string name="error_loading_media">Problem occurred with media during loading</string>
     <string name="error_opening_media">Problem opening media during loading</string>
+    <string name="error_not_connected">You need to connect to a chrome cast device first</string>
 </resources>
